@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-03-05T16:07:18Z",
-  "count_outdated" : 704,
-  "uniques_outdated" : 338,
+  "timestamp" : "2024-03-06T00:30:26Z",
+  "count_outdated" : 705,
+  "uniques_outdated" : 339,
   "count" : 732,
   "uniques" : 353,
   "clones" : [
-    {
-      "timestamp": "2024-02-20T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-02-21T00:00:00Z",
       "count": 2,
